--- a/package.json
+++ b/package.json
@@ -35,6 +35,10 @@
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
     "@vitejs/plugin-react": "^4.0.1",
+    "@vitest/coverage-c8": "^0.32.2",
+    "@vitest/coverage-v8": "^0.32.2",
+    "@vitest/ui": "^0.32.2",
+    "happy-dom": "^9.20.3",
     "vitest": "^0.32.2"
   }
 }
