--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@vitest/coverage-v8": "^0.32.2",
     "@vitest/ui": "^0.32.2",
     "happy-dom": "^9.20.3",
+    "next-router-mock": "^0.9.7",
     "vitest": "^0.32.2"
   }
 }
