--- a/package.json
+++ b/package.json
@@ -35,11 +35,14 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
+    "@types/jest-axe": "^3.5.5",
     "@vitejs/plugin-react": "^4.0.1",
     "@vitest/coverage-c8": "^0.32.2",
     "@vitest/coverage-v8": "^0.32.2",
     "@vitest/ui": "^0.32.2",
-    "happy-dom": "^9.20.3",
+    "jest": "^29.5.0",
+    "jest-axe": "^7.0.1",
+    "jest-environment-jsdom": "^29.5.0",
     "next-router-mock": "^0.9.7",
     "vitest": "^0.32.2"
   }
