--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@vitest/coverage-c8": "^0.32.2",
     "@vitest/coverage-v8": "^0.32.2",
     "@vitest/ui": "^0.32.2",
+    "husky": "^8.0.3",
     "jest": "^29.5.0",
     "jest-axe": "^7.0.1",
     "jest-environment-jsdom": "^29.5.0",
